refactor(all): rename easymaker to co-worker
Closes #50

--- a/web/index.html
+++ b/web/index.html
@@ -18,15 +18,15 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Allow to get information about easymakers and their missions">
+  <meta name="description" content="Allow to get / store information about our co-workers and their missions">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="easymakers_tracker">
+  <meta name="apple-mobile-web-app-title" content="where_my_coworkers">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>easymakers_tracker</title>
+  <title>where_my_coworkers</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
